--- a/configure.in
+++ b/configure.in
@@ -41,7 +41,7 @@ AC_SUBST(CFLAGS)
 AC_SUBST(CPPFLAGS)
 AC_SUBST(LDFLAGS)
 
-AM_PATH_GNOME(1.0.0,,AC_MSG_ERROR([*** Error finding libraries.]), [bonobo bonobox idl oaf])
+AM_PATH_GNOME(1.0.0,,AC_MSG_ERROR([*** Error finding libraries.]), [bonobo bonobox idl oaf vfs])
 AC_SUBST(GNOME_LIBS)
 AC_SUBST(GNOMEUI_LIBS)
 AC_SUBST(BONOBO_CFLAGS)
@@ -50,6 +50,8 @@ AC_SUBST(BONOBOX_CFLAGS)
 AC_SUBST(BONOBOX_LIBS)
 AC_SUBST(IDL_CFLAGS)
 AC_SUBST(OAF_CFLAGS)
+AC_SUBST(VFS_CFLAGS)
+AC_SUBST(VFS_LIBS)
 
 AM_PATH_ORBIT
 
