Added Swedish translation, added file to po/POTFILES.in, and removed po scripts obsoleted by xml-i18n-tools.

--- a/configure.in
+++ b/configure.in
@@ -58,7 +58,7 @@ AM_PATH_ORBIT
 GNOME_IDL_DIR="`$GNOME_CONFIG --datadir`/idl"
 
 AM_GNOME_GETTEXT
-ALL_LINGUAS=""
+ALL_LINGUAS="sv"
 gnomelocaledir='${prefix}/${DATADIRNAME}/locale'
 AC_SUBST(gnomelocaledir)
 
