Fixed some refcounting, and added the beginnings of a Gutter interface (for controlling the left-hand margin).
2001-05-12  Dave Camp  <dave@ximian.com>

	* scintilla-control/scintilla-control.c (scintilla_factory): Unref
	the property bag after adding it to the control.
	(scintilla_factory): Create the gutter implementation.
	(scintilla_factory): Use arrows instead of + and - for the
	folding.
	(main): Create a running context and run gtk_main_quit on its
	last_unref signal.

	* scintilla-control/scintilla/ScintillaGTK.cxx: Changed the default
	requisition.

	* scintilla-control/Makefile.am (scintilla_control_SOURCES): Build
	scintilla-editor-gutter.[ch].

	* scintilla-control/scintilla-editor-gutter.[ch]: New files.

	* idl/editor-gutter.idl: New file.

	* idl/GDL.idl: Include editor-gutter.idl

	* lib/Makefile.am (libgdl_la_SOURCES): Depend on editor-gutter.idl.

--- a/gdl/Makefile.am
+++ b/gdl/Makefile.am
@@ -1,6 +1,6 @@
 INCLUDES = \
 	-DGNOMELOCALEDIR=\""$(datadir)/locales"\" \
-	-I$(includedir) $(GNOME_INCLUDEDIR) $(BONOBO_CFLAGS)
+	-I$(includedir) $(GNOME_INCLUDEDIR) $(BONOBO_CFLAGS) $(GNOME_CFLAGS)
 
 lib_LTLIBRARIES = libgdl.la
 
@@ -18,7 +18,8 @@ idl_dir = $(top_srcdir)/idl
 IDL_FLAGS = -D__GDL_COMPILATION -I $(idl_dir) -I $(datadir)/dil $(IDL_CFLAGS)
 
 $(CORBA_GENERATED) : $(idl_dir)/GDL.idl \
-		     $(idl_dir)/editor-buffer.idl
+		     $(idl_dir)/editor-buffer.idl \
+		     $(idl_dir)/editor-gutter.idl
 	$(ORBIT_IDL) $(IDL_FLAGS) $(idl_dir)/GDL.idl
 
 libgdl_la_SOURCES = \
