--- a/idl/Makefile.am
+++ b/idl/Makefile.am
@@ -2,6 +2,7 @@ idldir = $(datadir)/idl
 
 idl_DATA = \
 	GDL.idl \
-	editor-buffer.idl
+	editor-buffer.idl \
+	editor-gutter.idl
 
 EXTRA_DIST = $(idl_DATA)
