Changed to reflect idl changes.
2001-07-07  Dave Camp  <dave@ximian.com>

	* scintilla-control/test.c: Changed to reflect idl changes.

	* scintilla-control/scintilla-persist-stream.c (impl_load): Removed
	the unused data variable.

	* scintilla-control/scintilla-editor-gutter.c: Replaced
	scintilla_editor_gutter_get_type with a BONOBO_X_TYPE_FUNC_FULL
	macro.

	* scintilla-control/scintilla-editor-buffer.c: Changed to reflect
	idl changes, and BonoboXObjectified.

	* scintilla-control/scintilla-control.c: Replaced
	init_scintilla_control_factory() and main() with
	BONOBO_OAF_FACTORY.
	(scintilla_factory): Marked the property description strings for
	translation.

	* scintilla-control/Makefile.am: Translate and install
	Bonobo_Control_Scintilla.oaf.in instead of installing
	scintilla.oafinfo.

	* idl/editor-buffer.idl: Put EditorBuffer int the GNOME::Development
	namespace and studlycapsify it.

	* gdl/Makefile.am (IDL_FLAGS): Fixed a typo (s/dil/idl/).

	* configure.in: Use GDL_CHECK_LIB for all the library checks,
	use AM_PROG_XML_I18N_TOOLS.

	* gdl.m4: New file.

	* Makefile.am: Install gdl.m4.

	* AUTHORS, MAINTAINERS, README: updated.

--- a/configure.in
+++ b/configure.in
@@ -2,6 +2,9 @@ AC_INIT(gdlConf.sh.in)
 AM_CONFIG_HEADER(config.h)
 AM_INIT_AUTOMAKE(gdl,0.1.0)
 
+AM_ACLOCAL_INCLUDE(macros)
+AM_ACLOCAL_INCLUDE(.)
+
 AM_MAINTAINER_MODE
 
 dnl libtool versioning
@@ -37,23 +40,36 @@ AC_STDC_HEADERS
 AC_ARG_PROGRAM
 AM_PROG_LIBTOOL
 
+AM_PROG_XML_I18N_TOOLS
+
 AC_SUBST(CFLAGS)
 AC_SUBST(CPPFLAGS)
 AC_SUBST(LDFLAGS)
 
-AM_PATH_GNOME(1.0.0,,AC_MSG_ERROR([*** Error finding libraries.]), [bonobo bonobox idl oaf vfs])
-AC_SUBST(GNOME_LIBS)
-AC_SUBST(GNOMEUI_LIBS)
+GNOME_INIT()
+GNOME_COMPILE_WARNINGS
+GNOME_X_CHECKS
+
+dnl ***************
+dnl GNOME Libraries 
+dnl ***************
+
+GDL_CHECK_LIB(gnome-libs, gnome, 1.2.9)
+GDL_CHECK_LIB(Bonobo, bonobo, 1.0.7)
+GDL_CHECK_LIB(Bonobo X, bonobox, 1.0.7)
+GDL_CHECK_LIB(OAF, oaf, 0.6.5)
+GDL_CHECK_LIB(GNOME-VFS, vfs, 1.0)
+
+IDL_CFLAGS=`gnome-config --cflags idl`
+
 AC_SUBST(BONOBO_CFLAGS)
 AC_SUBST(BONOBO_LIBS)
 AC_SUBST(BONOBOX_CFLAGS)
 AC_SUBST(BONOBOX_LIBS)
-AC_SUBST(IDL_CFLAGS)
 AC_SUBST(OAF_CFLAGS)
 AC_SUBST(VFS_CFLAGS)
 AC_SUBST(VFS_LIBS)
-
-AM_PATH_ORBIT
+AC_SUBST(IDL_CFLAGS)
 
 GNOME_IDL_DIR="`$GNOME_CONFIG --datadir`/idl"
 
