Added *.spec[.in] and xml-i18n-*.in files.
2001-08-08  Jens Finke <jens@gnome.org>

	* Makefile.am (EXTRA_DIST): Added *.spec[.in] and xml-i18n-*.in
	files.

	* configure.in: Added *_REQUIRED variables and appropriate
	AC_SUBST calls, use *_REQUIRED vars in CHECK_LIB macro, generate
	gdl.spec.

	* scintilla-control/Makefile.am: Removed duplicated EXTRA_DIST.

--- a/Makefile.am
+++ b/Makefile.am
@@ -18,6 +18,11 @@ EXTRA_DIST = 		\
 	gdl.m4          \
 	gdlConf.sh.in	\
 	MAINTAINERS	\
-	AUTHORS		
+	AUTHORS		\
+	gdl.spec.in	\
+	gdl.spec	\
+	xml-i18n-extract.in \
+	xml-i18n-merge.in \
+	xml-i18n-update.in
 
 CLEANFILES = gdlConf.sh 
