New docking widget by Gustavo M. Giraldez and Jeroen Zwartepoorte.
2001-09-30  Dave Camp  <dave@ximian.com>

	* gdl/gdl-dock-notebook.c:
	* gdl/gdl-dock-notebook.h:
	* gdl/gdl-dock-paned.c:
	* gdl/gdl-dock-paned.h:
	* gdl/gdl-dock-item.c:
	* gdl/gdl-dock-item.h:
	* gdl/gdl-dock.c:
	* gdl/gdl-dock.h: New docking widget by Gustavo M. Giraldez and Jeroen
	Zwartepoorte.

	* gdl/Makefile.am: Build the GdlDock widget.

	* scintilla-control/Makefile.am: Build libscintilla-control.la instead
	of scintilla-control.

	* scintilla-control/scintilla-control.c: Use BONOBO_OAF_SHLIB_FACTORY
	instead of BONOBO_OAF_FACTORY.

	* scintilla-control/Bonobo_Control_Scintilla.oaf.in: Change the
	scintilla component from an exe component to a shlib component.

	* scintilla-control/scintilla-ui.xml: Changed the edit toolbar to be in
	band 2.

--- a/gdl/Makefile.am
+++ b/gdl/Makefile.am
@@ -24,15 +24,29 @@ $(CORBA_GENERATED) : $(idl_dir)/GDL.idl \
 
 libgdl_la_SOURCES = \
 	$(CORBA_GENERATED) \
-	gdl-server-manager.c
+	gdl-server-manager.c \
+	gdl-dock.c \
+	gdl-dock-item.c \
+	gdl-dock-notebook.c \
+	gdl-dock-paned.c
 
 libgdl_la_LIBADD = \
 	$(BONOBO_LIBS) \
 	$(GNOME_LIBS)
+
+noinst_PROGRAMS=test-dock
+
+test_dock_sources=test-dock.c
+test_dock_LDADD=libgdl.la
 
 libgdlincludedir = $(includedir)/gdl
 libgdlinclude_HEADERS = \
 	$(CORBA_GENERATED_HEADER_FILES) \
 	gdl.h \
 	gdl-server-manager.h \
-	gdl-tools.h
+	gdl-tools.h \
+	gdl-dock.h \
+	gdl-dock-item.h \
+	gdl-dock-notebook.h \
+	gdl-dock-paned.h
+
