--- a/scintilla-control/Bonobo_Control_Scintilla.oaf.in
+++ b/scintilla-control/Bonobo_Control_Scintilla.oaf.in
@@ -1,7 +1,7 @@
 <oaf_info>
 <oaf_server iid="OAFIID:Bonobo_Control_ScintillaFactory"
-            type="exe"
-            location="scintilla-control">
+            type="shlib"
+            location="libscintilla-control.so">
 
 	<oaf_attribute name="repo_ids" type="stringv">
 		<item value="IDL:GNOME/GenericFactory:1.0"/>
