build static libtools libs
2001-10-02  JP Rosevear  <jpr@ximian.com>

	* scintilla-control/scintilla/Makefile.am: build static libtools
	libs

	* scintilla-control/Makefile.am: use static libtools libs for
	libtool 1.3.x

--- a/scintilla-control/Makefile.am
+++ b/scintilla-control/Makefile.am
@@ -48,9 +48,8 @@ libscintilla_control_la_LIBADD = \
 	$(BONOBO_LIBS)    \
 	$(BONOBOX_LIBS)   \
 	$(VFS_LIBS)       \
-	$(LEXER_OBJS) \
-	scintilla/libscintilla-widget.a \
-	../gdl/libgdl.la 
+	scintilla/libscintilla-lexers.la \
+	scintilla/libscintilla-widget.la
 
 test_scintilla_LDADD =  \
 	$(GNOME_LIBS)   \
