--- a/configure.in
+++ b/configure.in
@@ -13,12 +13,14 @@ GNOME_LIBS_REQUIRED=1.2.9
 BONOBO_REQUIRED=1.0.7
 OAF_REQUIRED=0.6.5
 GNOME_VFS_REQUIRED=1.0
+LIBXML_REQUIRED=1.8.15
 
 AC_SUBST(GTK_REQUIRED)
 AC_SUBST(GNOME_LIBS_REQUIRED)
 AC_SUBST(BONOBO_REQUIRED)
 AC_SUBST(OAF_REQUIRED)
 AC_SUBST(GNOME_VFS_REQUIRED)
+AC_SUBST(LIBXML_REQUIRED)
 
 dnl ==========================================================================
 
@@ -133,6 +135,7 @@ CHECK_LIB(Bonobo, bonobo, $BONOBO_REQUIRED)
 CHECK_LIB(Bonobo X, bonobox, $BONOBO_REQUIRED)
 CHECK_LIB(OAF, oaf, $OAF_REQUIRED)
 CHECK_LIB(GNOME-VFS, vfs, $GNOME_VFS_REQUIRED)
+CHECK_LIB(libxml, xml, $LIBXML_REQUIRED)
 
 IDL_CFLAGS=`gnome-config --cflags idl`
 
@@ -144,6 +147,8 @@ AC_SUBST(OAF_CFLAGS)
 AC_SUBST(VFS_CFLAGS)
 AC_SUBST(VFS_LIBS)
 AC_SUBST(IDL_CFLAGS)
+AC_SUBST(XML_CFLAGS)
+AC_SUBST(XML_LIBS)
 
 GNOME_IDL_DIR="`$GNOME_CONFIG --datadir`/idl"
 
