Added Module symbol-browser
	* Makefile.am:
	Added Module symbol-browser

	* configure.in:
	Added library checks for glib and gal.
	Added ctags configuration checks to be used with
	symbol-browser.
	Added configure outputs for symbol-browser.

	* acconfig.h:
	Added undefs for ctags configuration.

	* idl/symbol-browser.idl, idl/Makefile.am,
	  gdl/Makefile.am, idl/GDL.idl:
	Added symbol-browser.idl

	* symbol-browser/*/*/*
	Added symbol-browser module.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = idl gdl scintilla-control po intl
+SUBDIRS = idl gdl scintilla-control symbol-browser-control po intl
 
 m4datadir = $(datadir)/aclocal
 m4data_DATA = gdl.m4
