--- a/idl/Makefile.am
+++ b/idl/Makefile.am
@@ -3,6 +3,7 @@ idldir = $(datadir)/idl
 idl_DATA = \
 	GDL.idl \
 	editor-buffer.idl \
-	editor-gutter.idl
+	editor-gutter.idl \
+	symbol-browser.idl
 
 EXTRA_DIST = $(idl_DATA)
