--- a/configure.in
+++ b/configure.in
@@ -5,25 +5,19 @@ dnl it too, or it will never make it into the spec file!
 dnl
 dnl ==========================================================================
 
-GDL_MAJOR_VERSION=0
-GDL_MINOR_VERSION=3
-GDL_MICRO_VERSION=0
-GDL_VERSION=$GDL_MAJOR_VERSION.$GDL_MINOR_VERSION.$GDL_MICRO_VERSION
-VERSION=$GDL_VERSION
 
-AC_INIT(gdl, $VERSION, http://bugzilla.gnome.org/enter_bug.cgi?product=gdl)
+AC_INIT(gdl, 0.3.0, http://bugzilla.gnome.org/enter_bug.cgi?product=gdl)
 AM_CONFIG_HEADER(config.h)
 AC_CONFIG_SRCDIR(gdl/gdl.h)
 
-AM_INIT_AUTOMAKE(gdl, $VERSION)
+AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
+
+AC_PROG_INTLTOOL
 
 AC_SUBST(GDL_MAJOR_VERSION)
 AC_SUBST(GDL_MINOR_VERSION)
 AC_SUBST(GDL_MICRO_VERSION)
 AC_SUBST(GDL_VERSION)
-AC_SUBST(VERSION)
-
-AC_PROG_INTLTOOL
 
 GTK_REQUIRED=1.3.9
 GNOME_REQUIRED=1.96.0
