--- a/configure.in
+++ b/configure.in
@@ -19,14 +19,18 @@ AC_SUBST(GDL_MINOR_VERSION)
 AC_SUBST(GDL_MICRO_VERSION)
 AC_SUBST(GDL_VERSION)
 
+AC_PROG_INTLTOOL
+
 GTK_REQUIRED=1.3.9
 GNOME_REQUIRED=1.96.0
 BONOBOUI_REQUIRED=1.108.1
 XML_REQUIRED=2.2.8
+LIBGLADE_REQUIRED=1.99.5
 
 AC_SUBST(GTK_REQUIRED)
 AC_SUBST(GNOME_REQUIRED)
 AC_SUBST(XML_REQUIRED)
+AC_SUBST(LIBGLADE_REQUIRED)
 
 AM_MAINTAINER_MODE
 
@@ -250,9 +254,14 @@ AC_SUBST(GAL_LIBS)
 PKG_CHECK_MODULES(GDL_DEPENDENCIES, 
 	gtk+-2.0 >= $GTK_REQUIRED 
 	libgnome-2.0 >= $GNOME_REQUIRED
-	libbonoboui-2.0 >= $BONOBOUI_REQUIRED)
+	libbonoboui-2.0 >= $BONOBOUI_REQUIRED
+	libglade-2.0 >= $LIBGLADE_REQUIRED)
 AC_SUBST(GDL_DEPENDENCIES_CFLAGS)
 AC_SUBST(GDL_DEPENDENCIES_LIBS)
+
+# libglade-convert, FIXME: to be removed when glade2 stabilizes
+dnl AC_PATH_PROG(LIBGLADE_CONVERT, libglade-convert, 
+dnl	AC_MSG_ERROR(libglade-convert not found))
 
 # orbit-idl
 ORBIT_IDL="`$PKG_CONFIG --variable=orbit_idl ORBit-2.0`"
