--- a/symbol-browser-control/Makefile.am
+++ b/symbol-browser-control/Makefile.am
@@ -8,11 +8,11 @@ INCLUDES = \
 	-I$(top_srcdir)/gdl \
 	-DGNOME_DATADIR=\""$(datadir)"\" \
 	-DPACKAGE_LOCALE_DIR=\""$(gnomelocaledir)"\" \
+	-DG_DISABLE_DEPRECATED \
+	-DGTK_DISABLE_DEPRECATED \
 	$(GNOME_INCLUDEDIR) \
-	$(OAF_CFLAGS) \
-	$(BONOBO_CFLAGS) \
-	$(BONOBOX_CFLAGS) \
-	$(GAL_CFLAGS)
+	$(GDL_DEPENDENCIES_CFLAGS) \
+	-DSYMBOL_BROWSER_SRCDIR=\""$(srcdir)"/\"
 
 ## Using exec binary for testing.
 
@@ -20,18 +20,15 @@ INCLUDES = \
 #	libgnome-symbol-browser.la
 #
 #libgnome_symbol_browser_la_SOURCES = \
+#	symbol-browser.c\
+#	symbol-browser.h\
 #	symbol-browser-cobject.c\
 #	symbol-browser-cobject.h\
 #	factory.c
 #
 #libgnome_symbol_browser_la_LIBADD = \
-#	$(GNOME_LIBS)     \
-#	$(GNOMEUI_LIBS)   \
-#	$(BONOBO_LIBS)    \
-#	$(BONOBOX_LIBS)   \
-#	$(VFS_LIBS)       \
-#	$(XML_LIBS)       \
-#	ccview/libccview.la
+#	$(GDL_DEPENDENCIES_LIBS) \
+#	../gdl/libgdl-1.la
 
 bin_PROGRAMS = gnome-symbol-browser
 
@@ -43,10 +40,8 @@ gnome_symbol_browser_SOURCES = \
 	factory.c
 
 gnome_symbol_browser_LDADD = \
-        $(BONOBO_LIBS)  \
-	$(BONOBOX_LIBS) \
-	../gdl/libgdl.la \
-	$(GAL_LIBS)\
+	$(GDL_DEPENDENCIES_LIBS) \
+	../gdl/libgdl-1.la \
 	-L$(srcdir)/tagmanager\
 	-lctags
 
@@ -56,22 +51,18 @@ test_symbol_browser_SOURCES = \
 	test-symbol-browser.c
 
 test_symbol_browser_LDADD = \
-	$(GNOME_LIBS) \
-	$(BONOBO_LIBS) \
-	$(BONOBOX_LIBS) \
-	../gdl/libgdl.la 
+	$(GDL_DEPENDENCIES_LIBS) \
+	../gdl/libgdl-1.la 
 
-oaf_in_files = \
-	GNOME_Development_SymbolBrowser.oaf.in
+serverdir = $(libdir)/bonobo/servers
+server_in_files = GNOME_Development_SymbolBrowser.server.in
+server_DATA = $(server_in_files:.server.in=.server)
 
-oaf_DATA = $(oaf_in_files:.oaf.in=.oaf)
-oafdir = $(datadir)/oaf
+@INTLTOOL_SERVER_RULE@
 
-@XML_I18N_MERGE_OAF_RULE@
-
-uidir = $(datadir)/gnome/ui
+uidir = $(datadir)/gnome-2.0/ui
 ui_DATA = gnome-symbol-browser.xml
 
-EXTRA_DIST = $(oaf_in_files)\
-	$(oaf_DATA)\
-	$(ui_DATA) 
+EXTRA_DIST = 
+	$(server_DATA) \
+	$(ui_DATA)
