Require librsvg. Add new files. Use the gdl-icons to get the folder icon.
2002-03-10  Dave Camp  <dave@ximian.com>

	* configure.in:  Require librsvg.
	* gdl/Makefile.am: Add new files.
	* symbol-browser-control/symbol-browser.c: (get_image_for_type):
	Use the gdl-icons to get the folder icon.
	* gdl/gdl-icons.[ch]:
	* gdl/defailt-icon.[ch]:
	* gdl/program.xpm:
	* gdl/shared.xpm:
	* gdl/static.xpm: New files.

--- a/configure.in
+++ b/configure.in
@@ -26,11 +26,13 @@ GNOME_REQUIRED=1.96.0
 BONOBOUI_REQUIRED=1.108.1
 XML_REQUIRED=2.2.8
 LIBGLADE_REQUIRED=1.99.5
+LIBRSVG_REQUIRED=1.1.1
 
 AC_SUBST(GTK_REQUIRED)
 AC_SUBST(GNOME_REQUIRED)
 AC_SUBST(XML_REQUIRED)
 AC_SUBST(LIBGLADE_REQUIRED)
+AC_SUBST(LIBRSVG_REQUIRED)
 
 AM_MAINTAINER_MODE
 
@@ -256,7 +258,8 @@ PKG_CHECK_MODULES(GDL_DEPENDENCIES,
 	libgnome-2.0 >= $GNOME_REQUIRED
 	libgnomeui-2.0 >= $GNOME_REQUIRED
 	libbonoboui-2.0 >= $BONOBOUI_REQUIRED
-	libglade-2.0 >= $LIBGLADE_REQUIRED)
+	libglade-2.0 >= $LIBGLADE_REQUIRED
+	librsvg-2.0 >= $LIBRSVG_REQUIRED)
 AC_SUBST(GDL_DEPENDENCIES_CFLAGS)
 AC_SUBST(GDL_DEPENDENCIES_LIBS)
 
@@ -273,6 +276,12 @@ LIBBONOBO_IDL_DIR="`$PKG_CONFIG --variable=idldir libbonobo-2.0`"
 AC_SUBST(LIBBONOBO_IDL_DIR)
 BONOBO_ACTIVATION_IDL_DIR="`$PKG_CONFIG --variable=idldir bonobo-activation-2.0`"
 AC_SUBST(BONOBO_ACTIVATION_IDL_DIR)
+
+NAUTILUS_THEMEDIR="`$PKG_CONFIG --variable=prefix libnautilus`/share/pixmaps/nautilus"
+AC_SUBST(NAUTILUS_THEMEDIR)
+
+GNOME_VFS_ICONDIR="`$PKG_CONFIG --variable=prefix gnome-vfs-2.0`/share/pixmaps/document-icons"
+AC_SUBST(GNOME_VFS_ICONDIR)
 
 # marshal and enum generators
 GLIB_GENMARSHAL="`$PKG_CONFIG --variable=glib_genmarshal glib-2.0`"
